Created Algorithm for Sorting the custom TabeColumn Header
Commit Before Testing branch